--- a/config/sync/core.entity_view_display.taxonomy_term.country.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.country.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.country.field_geographic_region
     - field.field.taxonomy_term.country.field_geopolitical_group
     - field.field.taxonomy_term.country.field_human_rights_cases
     - field.field.taxonomy_term.country.field_ipu_member
@@ -25,6 +26,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_geographic_region:
+    weight: 8
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_geopolitical_group:
     weight: 5
     label: above
