Replace language switcher dropdown with language switcher.

--- a/config/sync/block.block.languagedropdownswitchercontent.yml
+++ b/config/sync/block.block.languagedropdownswitchercontent.yml
@@ -1,6 +1,6 @@
 uuid: 0ffa5216-12d3-4218-84d9-b7794ac39ca6
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - lang_dropdown
