--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -9,3 +9,14 @@ mysqldb:
 
 rediscache:
     type: redis:5.0
+
+solrsearch:
+    type: solr:7.7
+    disk: 1024
+    configuration:
+        cores:
+            maincore:
+                conf_dir: !archive "solr-conf/7.x"
+        endpoints:
+            main:
+                core: maincore
