--- a/config/sync/block.block.followus.yml
+++ b/config/sync/block.block.followus.yml
@@ -19,12 +19,15 @@ settings:
   label: 'Follow us'
   provider: menu_block
   label_display: '0'
-  follow: 0
-  follow_parent: child
   level: 1
+  custom_level: 1
+  hide_children: 0
   depth: 1
   expand: 0
+  expand_only_active_trails: 0
   parent: 'follow-us:'
   suggestion: follow_us
+  follow: 0
+  follow_parent: child
   render_parent: false
 visibility: {  }
