--- a/config/sync/block.block.ipu_mainmenu.yml
+++ b/config/sync/block.block.ipu_mainmenu.yml
@@ -19,12 +19,15 @@ settings:
   label: 'Sub menu'
   provider: menu_block
   label_display: '0'
-  follow: 0
-  follow_parent: child
   level: 1
+  custom_level: 1
+  hide_children: 0
   depth: 2
   expand: 1
+  expand_only_active_trails: 0
   parent: 'main:'
   suggestion: main
+  follow: 0
+  follow_parent: child
   render_parent: false
 visibility: {  }
