--- a/config/sync/block.block.megamenu.yml
+++ b/config/sync/block.block.megamenu.yml
@@ -23,12 +23,15 @@ settings:
   label: 'Mega menu'
   provider: menu_block
   label_display: '0'
-  follow: 0
-  follow_parent: child
   level: 1
+  custom_level: 1
+  hide_children: 0
   depth: 1
   expand: 0
+  expand_only_active_trails: 0
   parent: 'mega-menu:menu_link_content:d6891800-b362-4edc-87c7-5f04a5708a27'
   suggestion: mega_menu
+  follow: 0
+  follow_parent: child
   render_parent: false
 visibility: {  }
