--- a/config/sync/flickr_api.settings.yml
+++ b/config/sync/flickr_api.settings.yml
@@ -1,7 +1,7 @@
-api_key: ''
-api_secret: ''
+api_key: b24f8ce0c89155825a210fc168c7325f
+api_secret: 7754586005cf4886
 host_uri: 'http://flickr.com'
 api_uri: 'https://api.flickr.com/services/rest/'
-api_cache_maximum_age: 86400
+api_cache_maximum_age: '86400'
 _core:
   default_config_hash: sRSBfeiRynxXW-XL2-lF0udlFEkAt4dUhIl1ihk0ak4
