--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -16,8 +16,8 @@ type: 'php:7.2'
 # side is in the form `<service name>:<endpoint name>`.
 relationships:
     database: 'mysqldb:mysql'
-## Uncomment this line to enable Redis caching for Drupal.
     redis: 'rediscache:redis'
+#    solr: "solrsearch:main"
 
 # Add additional PHP extensions.
 runtime:
