--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -10,13 +10,13 @@ mysqldb:
 rediscache:
     type: redis:5.0
 
-solrsearch:
-    type: solr:7.7
-    disk: 1024
-    configuration:
-        cores:
-            maincore:
-                conf_dir: !archive "solr-conf/7.x"
-        endpoints:
-            main:
-                core: maincore
+#solrsearch:
+#    type: solr:7.7
+#    disk: 1024
+#    configuration:
+#        cores:
+#            maincore:
+#                conf_dir: !archive "solr-conf/7.x"
+#        endpoints:
+#            main:
+#                core: maincore
