--- a/composer.json
+++ b/composer.json
@@ -113,6 +113,7 @@
         "drupal/search_api_solr": "^2.7",
         "drupal/search_api_sorts": "^1.0@beta",
         "drupal/shield": "^1.2",
+        "drupal/similarterms": "^1.3",
         "drupal/site_status_message": "^1.0@RC",
         "drupal/sitemap": "^1.5",
         "drupal/smart_trim": "^1.1",
@@ -210,6 +211,9 @@
             },
             "drupal/menu_block": {
                 "Recognise don't need to show menu when not in active trail": "https://www.drupal.org/files/issues/2018-05-02/menu_block_follow-2756675-45.patch"
+            },
+            "drupal/similarterms": {
+                "PHP fatal error, SimilarTermsArgument::query() must be compatible with NumericArgument": "https://www.drupal.org/files/issues/query_4.patch"
             }
         },
         "drupal-scaffold": {
