--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -174,6 +174,7 @@ module:
   ultimenu: 0
   update: 0
   user: 0
+  video_embed_field: 0
   viewfield: 0
   views_bootstrap: 0
   views_bulk_operations: 0
