--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # Ignore Drupal's file directory
 /web/sites/*/files/
+/web/sites/*/files
+/private/
 
 # Ignore SimpleTest multi-site environment.
 /web/sites/simpletest
