--- a/config/sync/views.view.theme_list.yml
+++ b/config/sync/views.view.theme_list.yml
@@ -439,6 +439,20 @@ display:
           entity_field: type
           plugin_id: bundle
       sorts:
+        weight:
+          id: weight
+          table: taxonomy_term_field_data
+          field: weight
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: taxonomy_term
+          entity_field: weight
+          plugin_id: standard
         name:
           id: name
           table: taxonomy_term_field_data
