--- a/config/sync/core.entity_form_display.paragraph.callout_strip.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.callout_strip.default.yml
@@ -3,14 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.browse_files_modal
     - field.field.paragraph.callout_strip.field_background_image
     - field.field.paragraph.callout_strip.field_link
     - field.field.paragraph.callout_strip.field_text
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.callout_strip
   module:
+    - entity_browser
     - field_layout
-    - image
     - layout_discovery
     - link
     - text
@@ -26,10 +26,16 @@ content:
   field_background_image:
     weight: 2
     settings:
-      progress_indicator: throbber
+      entity_browser: browse_files_modal
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      view_mode: default
+      field_widget_replace: false
+      open: false
       preview_image_style: thumbnail
     third_party_settings: {  }
-    type: image_image
+    type: entity_browser_file
     region: content
   field_link:
     weight: 1
