Make Callout strip fields translatable

--- a/config/sync/field.field.paragraph.callout_strip.field_link.yml
+++ b/config/sync/field.field.paragraph.callout_strip.field_link.yml
@@ -19,7 +19,7 @@ bundle: callout_strip
 label: Link
 description: 'Title and link to content'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
