--- a/config/sync/field.field.paragraph.callout_strip.field_background_image.yml
+++ b/config/sync/field.field.paragraph.callout_strip.field_background_image.yml
@@ -31,8 +31,8 @@ third_party_settings:
   content_translation:
     translation_sync:
       alt: alt
-      title: title
       file: '0'
+      title: '0'
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
