--- a/config/sync/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_form_display.node.landing_page.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.landing_page.body
     - field.field.node.landing_page.field_caption
     - field.field.node.landing_page.field_content_section
+    - field.field.node.landing_page.field_data_points_for_theme
     - field.field.node.landing_page.field_media_image
     - field.field.node.landing_page.field_theme
     - node.type.landing_page
@@ -25,33 +26,78 @@ third_party_settings:
   field_group:
     group_basic_info:
       children:
-        - langcode
         - title
-        - field_theme
         - body
-      parent_name: ''
-      weight: 0
-      format_type: fieldset
+        - langcode
+      parent_name: group_landing_page_content
+      weight: 2
+      format_type: tab
       format_settings:
         id: ''
         classes: node-basic
         description: ''
         required_fields: true
+        formatter: closed
       label: 'Basic information'
       region: content
     group_media:
       children:
         - field_media_image
         - field_caption
-      parent_name: ''
-      weight: 2
-      format_type: fieldset
+      parent_name: group_landing_page_content
+      weight: 4
+      format_type: tab
       format_settings:
         id: ''
         classes: ''
         description: ''
         required_fields: true
+        formatter: closed
       label: Media
+      region: content
+    group_landing_page_content:
+      children:
+        - group_basic_info
+        - group_thematic_content
+        - group_media
+        - group_conte
+      parent_name: ''
+      weight: 1
+      format_type: tabs
+      format_settings:
+        id: ''
+        classes: ''
+        direction: horizontal
+      label: 'Landing page content'
+      region: content
+    group_conte:
+      children:
+        - field_content_section
+      parent_name: group_landing_page_content
+      weight: 5
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Content sections'
+      region: content
+    group_thematic_content:
+      children:
+        - field_theme
+        - field_data_points_for_theme
+      parent_name: group_landing_page_content
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Thematic content'
       region: content
 id: node.landing_page.default
 targetEntityType: node
@@ -60,7 +106,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 4
+    weight: 6
     settings:
       rows: 9
       summary_rows: 3
@@ -69,7 +115,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -82,7 +128,7 @@ content:
     type: text_textarea
     region: content
   field_content_section:
-    weight: 3
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -92,6 +138,18 @@ content:
       default_paragraph_type: sections
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
+  field_data_points_for_theme:
+    type: entity_reference_paragraphs
+    weight: 4
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
+    third_party_settings: {  }
     region: content
   field_media_image:
     weight: 122
@@ -118,14 +176,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 7
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -133,39 +191,39 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 6
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 2
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 7
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 2
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -173,7 +231,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
