--- a/config/sync/core.entity_view_display.paragraph.slide.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.slide.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.slide.field_image
     - field.field.paragraph.slide.field_link_text
+    - field.field.paragraph.slide.field_media
     - field.field.paragraph.slide.field_node
     - field.field.paragraph.slide.field_summary
     - field.field.paragraph.slide.field_title
@@ -35,15 +36,31 @@ content:
     type: responsive_image
     region: content
   field_link_text:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
+  field_media:
+    type: entity_reference_entity_view
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: content
   field_node:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       link: true
@@ -51,14 +68,14 @@ content:
     type: entity_reference_label
     region: content
   field_summary:
-    weight: 2
+    weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_title:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
