--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,6 +6,7 @@ module:
   admin_toolbar_content_languages: 0
   admin_toolbar_tools: 0
   adminimal_admin_toolbar: 0
+  alter_entity_autocomplete: 0
   automated_cron: 0
   back_to_top: 0
   backup_migrate: 0
@@ -145,6 +146,7 @@ module:
   redirect: 0
   redis: 0
   responsive_image: 0
+  responsive_menu: 0
   rest: 0
   roleassign: 0
   search: 0
@@ -161,6 +163,7 @@ module:
   sitemap: 0
   smart_trim: 0
   stage_file_proxy: 0
+  superfish: 0
   system: 0
   taxonomy: 0
   taxonomy_manager: 0
