--- a/config/sync/ds.field.contextual_menu_event_navigation.yml
+++ b/config/sync/ds.field.contextual_menu_event_navigation.yml
@@ -10,11 +10,12 @@ properties:
     label: ''
     provider: menu_block
     label_display: visible
-    follow: 0
-    follow_parent: child
     level: 1
-    depth: 2
+    custom_level: '1'
+    hide_children: 0
+    depth: 0
     expand: 0
+    expand_only_active_trails: 1
     parent: 'mega-menu:menu_link_content:3310ff71-4264-4d76-818f-13e0826d43d1'
     suggestion: mega_menu_events
 type: block
